[package]
name = "stock_analysis_server"
version = "0.1.0"
authors = ["luwangda <luwangda@kedacom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
crabler = "0.1.21"
html5ever = "0.25.1"
hyper-tls = "0.5.0"
reqwest = {version="0.10.10",feature=["json"]}
surf = "2.2.0"
hyper = "^0.10.6"
unicase = "1.0"
url = "1.0"
rand = "0.6.1"
futures = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
tokio-tls = { version = "0.2.0", optional = true }
tokio-tcp = { version = "0.1", optional = true }
tokio-codec = { version = "0.1", optional = true }
tokio-reactor = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }
native-tls = { version = "0.2.1", optional = true }
websocket-base = {version="0.26.0", default-features=false }
websocket = "0.26.0"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }


[dev-dependencies.tokio]
version = "0.1"
default-features = false
features = ["codec", "tcp", "rt-full"]

[features]
default = ["sync", "sync-ssl", "async", "async-ssl"]
sync = ["websocket-base/sync"]
sync-ssl = ["native-tls", "sync", "websocket-base/sync-ssl"]
async = ["bytes", "futures", "tokio-io", "tokio-tcp", "tokio-reactor", "tokio-codec", "websocket-base/async"]
async-ssl = ["native-tls", "tokio-tls", "async", "websocket-base/async-ssl"]
nightly = ["hyper/nightly"]

