[package]
name = "stock_analysis_server"
version = "0.1.0"
authors = ["luwangda <luwangda@kedacom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
crabler = "0.1.21"
html5ever = "0.25.1"
reqwest = {version="0.10.10",feature=["json"]}
surf = "2.2.0"
unicase = "1.0"
url = "1.0"
rand = "0.6.1"
bytes = { version = "1.0.1", optional = true }
native-tls = { version = "0.2.1", optional = true }
websocket-base = {version="0.26.0", default-features=false }
websocket = "0.26.0"
actix-web = "3.3.2"
hyper = { version = "0.14.4", features = ["client", "server", "runtime", "http1"] }
tokio = {version = "1.4.0", features = ["full"]}
futures = "0.3.13"
encoding = "0.2.33"




